Explanations are added

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -24,10 +24,7 @@
         "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
         "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
         "from azureml.train.hyperdrive.parameter_expressions import uniform, choice, randint\n",
-        "from azureml.core.conda_dependencies import CondaDependencies\n",
-        "\n",
-        "\n",
-        "\n"
+        "from azureml.core.conda_dependencies import CondaDependencies"
       ],
       "outputs": [],
       "execution_count": 33,
@@ -52,7 +49,9 @@
       "source": [
         "## Dataset\n",
         "\n",
-        "TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external."
+        "A Kaggle dataset \"60k Stack Overflow Questions with Quality Rating\" has been used for this project. The dataset can be downloaded from the following link: https://www.kaggle.com/imoore/60k-stack-overflow-questions-with-quality-rate. Questions from 2016-2020 are labelled in three categories (HQ, LQ_EDIT, LQ_CLOSE), according to their quality. 45000 rows are subsetted for the project. Title and Body of each question has been appended and considered as being a single text. This text has been used as the only predictor of quality, tags are ignored. For simplicity, the task has been reduced to a binary classification between HQ and LQ, meaning that LQ_EDIT and LQ_CLOSE have been aggregated to one class, LQ.\n",
+        "\n",
+        "Binary classification of the texts have been made on a embedding matrix of word counts."
       ],
       "metadata": {}
     },
@@ -189,7 +188,13 @@
       "source": [
         "## Hyperdrive Configuration\n",
         "\n",
-        "TODO: Explain the model you are using and the reason for chosing the different hyperparameters, termination policy and config settings."
+        "GradientBoostingClassifier from scikit-learn has been used for its practical usage, and gradient boosters' overall good performance in any kind of tabular datasets. The idea of using many base estimators and weighting data points, features, and estimators at each iteration is very powerful.\n",
+        "\n",
+        "The hyperparameters to search are the two most fundamental ones for gradient boosters, learning rate and the number of estimators. High number of estimators and high learning rates would case overfitting. While less estimators would lead to underfitting and a very small learning rate might get stuck at an infeasible local optimum.\n",
+        "\n",
+        "The early stopping policy (Bandit Policy) checks the optimization job every 2 iterations and prevented the tuning process going astray with the values that are not much contibuting to the metric improvement. If the metric falls outside of the slack value range (top %20 here), the job is terminated. However, it doesn't seem to be perfectly implemented when we check the logs (there is a warning that primary metric is not chosen, although it has been chosen properly and available to see in Azure ML UI). Any way, the GradientBoostingClassifier has its own early stopper, so we are safe with this respect.\n",
+        "\n",
+        "The other config settings are provided by using ScriptRunConfig with a python enviroment (a mixture of pip and conda packages as defined above previously). Total runs are restricted to 20 and concurrent runs to 4, as expected by Udacity reviewers.\n"
       ],
       "metadata": {
         "collapsed": true,
@@ -273,10 +278,7 @@
       "cell_type": "markdown",
       "source": [
         "## Run Details\n",
-        "\n",
-        "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
-        "\n",
-        "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
+        "`RunDetails` widget has run but did not show any output except logs. Screenshots from Azure ML UI has been provided in Readme.md."
       ],
       "metadata": {
         "collapsed": true,
@@ -558,9 +560,7 @@
       "source": [
         "## Model Deployment\n",
         "\n",
-        "Remember you have to deploy only one of the two models you trained.. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
-        "\n",
-        "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
+        "This model has not been deployed as a web service. Please check the automl.ipynb"
       ],
       "metadata": {
         "collapsed": true,
@@ -574,41 +574,6 @@
           }
         }
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "TODO: In the cell below, send a request to the web service you deployed to test it."
-      ],
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "TODO: In the cell below, print the logs of the web service and delete the service"
-      ],
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
     }
   ],
   "metadata": {
